--- a/docker/README
+++ b/docker/README
@@ -1,13 +1,13 @@
 Build with:
-docker build -t pal_graphite .
+docker build -t pal_statistics .
 
 
 Run in background:
-docker run -d -p 80:80 -p 3000:3000 pal_graphite
+docker run -d -p 80:80 -p 3000:3000 pal_statistics
 
 
 Run in interactive:
-docker run -it -p 80:80 -p 3000:3000 pal_graphite bash
+docker run -it -p 80:80 -p 3000:3000 pal_statistics bash
 
 
 Persistent storage
@@ -16,5 +16,5 @@ Create volumens
 
 docker volume create graphite
 
-docker run -d -p 80:80 -p 3000:3000 -v graphite:/var/lib/graphite pal_graphite
+docker run -d -p 80:80 -p 3000:3000 -v graphite:/var/lib/graphite pal_statistics
 
