--- a/docker/README
+++ b/docker/README
@@ -3,11 +3,11 @@ docker build -t pal_statistics .
 
 
 Run in background:
-docker run -d -p 80:80 -p 3000:3000 pal_statistics
+docker run -d -p 80:80 -p 2003:2003 -p 2004:2004 -p 3000:3000 pal_statistics
 
 
 Run in interactive:
-docker run -it -p 80:80 -p 3000:3000 pal_statistics bash
+docker run -it -p 80:80 -p 2003:2003 -p 2004:2004 -p 3000:3000 pal_statistics bash
 
 
 Persistent storage
