--- a/docker/README
+++ b/docker/README
@@ -1,6 +1,11 @@
 Build with:
 docker build -t pal_statistics .
 
+Some ports need to be published to the docker:
+- 80:   apache graphite-web server
+- 2003: graphite-carbon line listener (plain text)
+- 2004: graphite-carbon pickle listener
+- 3000: grafana server
 
 Run in background:
 docker run -d -p 80:80 -p 2003:2003 -p 2004:2004 -p 3000:3000 pal_statistics
